--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -13,6 +13,7 @@ env:
   RUSTUP_HOME: "/usr/local/rustup"
   SCCACHE_DIR: "/usr/local/sccache"
   RUSTC_WRAPPER: "/usr/local/bin/sccache"
+  SOLIDITY_VERSION: "0.8.13"
 
 jobs:
   build-differentials:
@@ -38,6 +39,9 @@ jobs:
       - name: Update Submodules
         run: git submodule update --init --recursive
 
+      - name: Add Default Toolchain
+        run: rustup default stable
+
       - name: Build Differentials
         working-directory: src/test/differentials
         run: mold --run cargo build
@@ -50,17 +54,75 @@ jobs:
           name: differentials-dev
           path: /tmp/differentials.tar.gz
 
+  run-mythril-on-bridge-proxy:
+    runs-on: self-hosted
+
+    container:
+      image: summerwind/actions-runner:latest
+      volumes:
+        - /var/lib/docker:/var/lib/docker
+
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Update Apt
+        run: sudo apt update
+
+      - name: Install Dependencies
+        run: sudo apt install -y libssl-dev python3-dev
+
+      - name: Install Mythril
+        run: sudo pip3 install mythril
+
+      - name: Update Submodules
+        run: git submodule update --init --recursive
+
+      - name: Run Mythril Analysis On BridgeProxy
+        run: myth analyze src/BridgeProxy.sol --solv ${{ env.SOLIDITY_VERSION}} --solc-json mythril.config.json --parallel-solving -o json > mythril_output
+
+      # Parsing the output through jq is necessary due to mythril not exiting with an error status code: https://github.com/ConsenSys/mythril/issues/1650
+      - name: Check BridgeProxy Output
+        shell: bash
+        run: if [[ $(cat mythril_output | jq '.error == null') ]]; then exit 0; else echo $(cat mythril_output | jq .issues) && exit 1; fi
+
+  run-mythril-on-themelio-bridge:
+    runs-on: self-hosted
+
+    container:
+      image: summerwind/actions-runner:latest
+      volumes:
+        - /var/lib/docker:/var/lib/docker
+
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Update Apt
+        run: sudo apt update
+
+      - name: Install Dependencies
+        run: sudo apt install -y libssl-dev python3-dev
+
+      - name: Install Mythril
+        run: sudo pip3 install mythril
+
+      - name: Update Submodules
+        run: git submodule update --init --recursive
+
+      - name: Run Mythril Analysis On ThemelioBridge
+        run: myth analyze src/ThemelioBridge.sol --solv ${{ env.SOLIDITY_VERSION}} --solc-json mythril.config.json --execution-timeout 60 --parallel-solving -o json > mythril_output
+
+      # Parsing the output through jq is necessary due to mythril not exiting with an error status code: https://github.com/ConsenSys/mythril/issues/1650
+      - name: Check ThemelioBridge Output
+        shell: bash
+        run: if [[ $(cat mythril_output | jq '.error == null') ]]; then exit 0; else echo $(cat mythril_output | jq .issues) && exit 1; fi
+
   run-forge-tests:
     runs-on: self-hosted
 
     container:
-      image: rust:latest
+      image: summerwind/actions-runner:latest
       volumes:
         - /var/lib/docker:/var/lib/docker
-        - /usr/local/cargo/git:/usr/local/cargo/git
-        - /usr/local/cargo/registry:/usr/local/cargo/registry
-        - /usr/local/sccache:/usr/local/sccache
-        - /usr/local/rustup:/usr/local/rustup
         - /usr/local/forge-cache:/usr/local/forge-cache
 
     needs:
@@ -69,14 +131,14 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Update Apt
-        run: apt update
+      - name: Update Submodules
+        run: git submodule update --init --recursive
 
       - uses: actions/download-artifact@v3
         with:
           name: differentials-dev
 
-      - name: Extract Ginkou-Loader
+      - name: Extract Differentials
         run: tar -xf differentials.tar.gz
 
       - name: Create Differentials Directory
@@ -85,34 +147,81 @@ jobs:
       - name: Move Differentials Binary
         run: mv bridge_differential_tests src/test/differentials/target/debug/
 
-#      - name: Install Wget
-#        run: apt install -y wget
-#
-#      - name: Download Forge
-#        run: wget -q https://github.com/themeliolabs/artifacts/raw/master/forge.tar.gz
-#
-#      - name: Extract Forge
-#        run: tar -xf forge.tar.gz
-#
-#      - name: Remove Forge Archive
-#        run: rm forge.tar.gz
-#
-#      - name: Make Forge Executable
-#        run: chmod +x forge
-#
-#      - name: Move Forge To A PATH Directory
-#        run: mv forge /usr/local/bin/forge
-#
-#      - uses: themeliolabs/actions-sccache@v1
-#
-#      - uses: themeliolabs/actions-mold@v1
-#
-#      - name: Update Submodules
-#        run: git submodule update --init --recursive
-#
-#      - name: Build Differentials
-#        working-directory: src/test/differentials
-#        run: mold --run cargo build
-#
-#      - name: Run Forge Tests
-#        run: forge test --out ${{ env.FORGE_OUTPUT_DIRECTORY}} -vvv --ffi
+      - name: Download Forge
+        run: wget -q https://github.com/themeliolabs/artifacts/raw/master/forge.tar.gz
+
+      - name: Extract Forge
+        run: tar -xf forge.tar.gz
+
+      - name: Remove Forge Archive
+        run: rm forge.tar.gz
+
+      - name: Make Forge Executable
+        run: chmod +x forge
+
+      - name: Move Forge To A PATH Directory
+        run: sudo mv forge /usr/local/bin/forge
+
+      - name: Run Forge Tests
+        run: forge test --out ${{ env.FORGE_OUTPUT_DIRECTORY}} -vvv --ffi
+
+  run-slither:
+    runs-on: self-hosted
+
+    container:
+      image: summerwind/actions-runner:latest
+      volumes:
+        - /var/lib/docker:/var/lib/docker
+        - /usr/local/forge-cache:/usr/local/forge-cache
+
+    needs:
+      - build-differentials
+
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Add Ethereum Repository
+        run: sudo add-apt-repository -y ppa:ethereum/ethereum
+
+      - name: Update Apt
+        run: sudo apt update
+
+      - name: Update Wget, Solidity, And Python
+        run: sudo apt install -y wget solc python3-dev
+
+      - name: Install Slither
+        run: sudo pip3 install slither-analyzer
+
+      - name: Update Submodules
+        run: git submodule update --init --recursive
+
+      - uses: actions/download-artifact@v3
+        with:
+          name: differentials-dev
+
+      - name: Extract Differentials
+        run: tar -xf differentials.tar.gz
+
+      - name: Create Differentials Directory
+        run: mkdir -p src/test/differentials/target/debug
+
+      - name: Move Differentials Binary
+        run: mv bridge_differential_tests src/test/differentials/target/debug/
+
+      - name: Download Forge
+        run: wget -q https://github.com/themeliolabs/artifacts/raw/master/forge.tar.gz
+
+      - name: Extract Forge
+        run: tar -xf forge.tar.gz
+
+      - name: Remove Forge Archive
+        run: rm forge.tar.gz
+
+      - name: Make Forge Executable
+        run: chmod +x forge
+
+      - name: Move Forge To A PATH Directory
+        run: sudo mv forge /usr/local/bin/forge
+
+      - name: Run Slither Analysis
+        run: slither .
