Fixing compilation issues in CI.

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -163,7 +163,7 @@ jobs:
         run: sudo mv forge /usr/local/bin/forge
 
       - name: Run Forge Tests
-        run: forge test --out ${{ env.FORGE_OUTPUT_DIRECTORY}} -vvv --ffi
+        run: forge test --out ${{ env.FORGE_OUTPUT_DIRECTORY}} -vvv --ffi --optimize --optimizer-runs 100 --via-ir
 
   run-slither:
     runs-on: self-hosted
